--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link href="style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,22 +10,28 @@
 </head>
 
 <body>
-    <form class="hidden" id="login-form">
-        <input type="text" placeholder="please, write your name!" required maxlength="15" />
-        <button>submit</button>
-    </form>
-    <h2 id="clock"></h2>
-    <h1 class="hidden"></h1>
-    <form id="to-do">
-        <input type="text" placeholder="plase, write list" />
-    </form>
-    <ul id="to-do-list"></ul>
-    <div id="quote"></div>
-    <script src="js/login.js"></script>
-    <script src="js/clock.js"></script>
-    <script src="js/quote.js"></script>
-    <script src="js/background.js"></script>
-    <script src="js/todo.js"></script>
+    <div class="background">
+        <h2 id="clock"></h2>
+        <form class="hidden" id="login-form">
+            <input class="text-input" type="text" placeholder="please, write your name!" required maxlength="15" />
+        </form>
+        <h1 class="hidden hello"></h1>
+        <form id="to-do">
+            <input class="text-input" type="text" placeholder="plase, write list" />
+        </form>
+        <ul id="to-do-list"></ul>
+        <div id="quote"></div>
+        <div id="weather">
+            <span></span>
+            <span></span>
+        </div>
+        <script src="js/login.js"></script>
+        <script src="js/clock.js"></script>
+        <script src="js/quote.js"></script>
+        <script src="js/background.js"></script>
+        <script src="js/todo.js"></script>
+        <script src="js/weather.js"></script>
+    </div>
 </body>
 
 </html>
