--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </form>
         <h1 class="hidden hello"></h1>
         <form id="to-do">
-            <input class="text-input" type="text" placeholder="plase, write list" />
+            <input class="text-input" type="text" placeholder="plase, write a list" />
         </form>
         <ul id="to-do-list"></ul>
         <div id="quote"></div>
