--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Momentum</title>
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,9 +18,11 @@
         </form>
         <h1 class="hidden hello"></h1>
         <form id="to-do">
-            <input class="text-input" type="text" placeholder="plase, write a list" />
+            <input class="text-input" type="text" placeholder="please, write a list!" />
         </form>
-        <ul id="to-do-list"></ul>
+        <div id="to-do-div">
+            <ul id="to-do-list"></ul>
+        </div>
         <div id="quote"></div>
         <div id="weather">
             <span></span>
