--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
             <input class="text-input" type="text" placeholder="please, write your name!" required maxlength="15" />
         </form>
         <h1 class="hidden hello"></h1>
-        <form id="to-do">
-            <input class="text-input" type="text" placeholder="please, write a list!" />
-        </form>
-        <div id="to-do-div">
-            <ul id="to-do-list"></ul>
+        <div id="to-do-box" class="hidden">
+            <form id="to-do">
+                <input class="text-input" type="text" placeholder="please, write a list!" />
+            </form>
+            <div id="to-do-div">
+                <ul id="to-do-list"></ul>
+            </div>
         </div>
         <div id="quote"></div>
         <div id="weather">
